# google-apple-cloudflare-whitelist

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_EN.md  SECURITY.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: PRODUCTION_PATTERNS.md  PRODUCTION_PATTERNS_EN.md  WHITELIST_DESIGN.md  WHITELIST_DESIGN_EN.md
examples/backend/: validate_source_ip.py
examples/cron/: google-apple-whitelist.cron
examples/ip_matching/: README.md  go_example.go  node_example.ts  python_example.py  rust_example.rs
examples/ipset/: sync_whitelist_ipset.sh
examples/macos/: com.google-apple-whitelist.plist
examples/nftables/: main.nft
examples/nginx/: server-cloudflare-origin.conf
examples/systemd/: google-apple-whitelist.service  google-apple-whitelist.timer
examples/windows/: register-google-apple-whitelist-task.ps1
scripts/: build_release_zip.py  replace_zip_contents.py  run_fetch.ps1  run_fetch.sh
src/google_apple_whitelist/: __init__.py  cli.py  core.py  matching.py  rendering.py  scheduler.py
src/google_apple_whitelist/data/: apple_ranges.json
tests/: test_cli.py  test_core.py  test_matching.py  test_release_zip_scripts.py  test_rendering.py  test_scheduler.py
